@@ -8,6 +8,7 @@
 	  (Donnie Berkholz)
  	* Fix USB suspend suggestion to take semi blacklisted stuff into
 	  account
+	* Add support for Intel's 4965 power saving mode
 
 1.9 --
 	* add support for mac80211 based wireless power saving
